@@ -132,5 +132,6 @@ If you get stuck, you can ask for help in the Plugin Forum.
 * Add - Auto-complete first and last name on checkout form when using Link payment method.
 * Add - Allow subscription orders to be paid with Link payment method.
 * Add - Add inbox notification for Link payment method.
+* Tweak - Adjust texts and links in WC admin advanced settings.
 
 [See changelog for all versions](https://raw.githubusercontent.com/woocommerce/woocommerce-gateway-stripe/trunk/changelog.txt).
